--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git練習</title>
+    <link rel="stylesheet" href="style.css">
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -21,10 +22,6 @@
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
-        h1 {
-            color: #333;
-            margin-bottom: 1rem;
-        }
         p {
             color: #666;
             font-size: 1.2rem;
@@ -34,7 +31,9 @@
 <body>
     <div class="container">
         <h1>Git練習</h1>
+        
         <p>gitの練習です</p>
+        <p>コミットや、マージンをします</p>
     </div>
 </body>
 </html> 
