タイトルを変更

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git練習</title>
+    <title>Gitとブランチの練習</title>
     <link rel="stylesheet" href="style.css">
     <style>
         body {
@@ -31,7 +31,7 @@
 <body>
     <div class="container">
         <h1>Git練習</h1>
-        
+
         <p>gitの練習です</p>
         <p>コミットや、マージンをします</p>
     </div>
