--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
     <div class="container">
         <h1>Git練習</h1>
-
+        <p>reBaseの練習</p>
         <p>gitの練習です</p>
         <p>コミットや、マージンをします</p>
     </div>
