Pushの練習用のテキストを追加

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <h1>Git練習</h1>
         <p>reBaseの練習</p>
         <p>gitの練習です</p>
+        <p>Pushの練習です</p>
         <p>コミットや、マージンをします</p>
     </div>
 </body>
